<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.Permissions">

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/permission_illustration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/permissionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/permissions_required"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/permissionDes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainImage" />

    <TextView
        android:id="@+id/permissionDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="9sp"
        android:textSize="12sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:lines="2"
        android:maxLines="2"
        android:minLines="2"
        android:text="@string/permission_req"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/cameraImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permissionTxt" />

    <ImageView
        android:id="@+id/cameraImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/camera"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/storageImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permissionDes" />

    <TextView
        android:id="@+id/cameraPermissionTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/camera_permission"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cameraImg"
        app:layout_constraintTop_toTopOf="@+id/cameraImg" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/required_camera_permission_to_work_properly"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cameraPermissionTxt"
        app:layout_constraintTop_toBottomOf="@+id/cameraPermissionTxt" />


    <ImageView
        android:id="@+id/storageImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/storage"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/micImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraImg" />

    <TextView
        android:id="@+id/storageTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/storage_permission"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/storageImg"
        app:layout_constraintTop_toTopOf="@+id/storageImg" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/required_storage_permission_to_work_properly"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/storageTxt"
        app:layout_constraintTop_toBottomOf="@+id/storageTxt" />


    <ImageView
        android:id="@+id/micImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/audio"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/deny"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storageImg" />

    <TextView
        android:id="@+id/micTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/audio_permission"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/micImage"
        app:layout_constraintTop_toTopOf="@+id/micImage" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/required_audio_permission_to_work_properly"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/micTxt"
        app:layout_constraintTop_toBottomOf="@+id/micTxt" />

    <TextView
        android:id="@+id/deny"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_border_bg"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/deny"
        android:textColor="@color/endColor"
        app:layout_constraintTop_toBottomOf="@+id/micImage"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/allow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".3" />

    <TextView
        android:id="@+id/allow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/splash_button_bg"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/allow"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/deny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deny"
        app:layout_constraintWidth_percent=".3" />


</androidx.constraintlayout.widget.ConstraintLayout>